# gwcosmo_agn

./: .gitattributes  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  README.rst  pdet_101.p_checkpoint.p  pyproject.toml  requirements.txt  setup.cfg  setup.py
codes/: unused.py
codes/glasgow/: run_mdc.py
codes/glasgow/Updated_pofd/: Common_func.py  Pofd.py  Setup.py
codes/glasgow/src/: DESCRIPTION.rst  setup.py
codes/nikhef/: cosmo_H0_reviewable_clean_MDC_v3.py  populate_posteriors.py  selection_gw.py  standard_cosmology.py
codes/uwm/: catalog__.py  completion.py  gw.py  gwcosmo_single_posterior
conda/recipe/: meta.yaml
docs/: conf.py  dark-siren-example.md  gwcosmo_method.tex  index.rst  index.txt  injections.md  installation.md  likelihood.txt  method.txt
docs/latex/: Makefile  gwcosmo_method.tex
gwcosmo/: __init__.py  create_injections.py  detectionprobability.py  gwcosmo.py  helio_cmb.py  injections.py  master.py  populate_posteriors.py  posterior_samples.py  redshift_uncertainty.py  schechter_function.py  skymap.py  standard_cosmology.py
gwcosmo/data/: BBH_z_H0_pD_array.p  BNS-uniform_z_H0_pD_array.p  BNS_z_H0_pD_array.p  H1_O2_strain.txt  H1_O3_strain.txt  H1_O4a_avg.txt  H1_O4b_avg.txt  L1_O2_strain.txt  L1_O3_strain.txt  L1_O4a_avg.txt  L1_O4b_avg.txt  LHO_1369553418.txt  LHO_1388988918.txt  LHO_O4a.txt  LLO_1369553418.txt  LLO_1384459938.txt  LLO_O4a.txt  MDCPSD_BNS-gaussian_5000Nsamps_z_H0_pD_array.p  MDCPSD_BNS-uniform_5000Nsamps_z_H0_pD_array.p  O1PSD_BBH-flatlog_5000Nsamps_z_H0_pD_array.p  O1PSD_BBH-powerlaw-2.3_5000Nsamps_z_H0_pD_array.p  O1PSD_BBH-powerlaw_5000Nsamps_z_H0_pD_array.p  O1PSD_BBH-powerlaw_alpha_1.0_5000Nsamps_z_H0_pD_array.p  O1PSD_BBH-powerlaw_alpha_1.0_Mmin_5.0_Mmax_100.0_Nsamps20000_full_waveform.p  O1PSD_BBH-powerlaw_alpha_1.0_Nsamps6000_inspiral.p  O1PSD_BBH-powerlaw_alpha_1.1_5000Nsamps_z_H0_pD_array.p  O1PSD_BBH-powerlaw_alpha_1.2_5000Nsamps_z_H0_pD_array.p  O1PSD_BBH-powerlaw_alpha_1.3_5000Nsamps_z_H0_pD_array.p  O1PSD_BBH-powerlaw_alpha_1.4_5000Nsamps_z_H0_pD_array.p  O1PSD_BBH-powerlaw_alpha_1.5_5000Nsamps_z_H0_pD_array.p  O1PSD_BBH-powerlaw_alpha_1.6_10000Nsamps_inspiral.p  O1PSD_BBH-powerlaw_alpha_1.6_5000Nsamps_z_H0_pD_array.p  O1PSD_BBH-powerlaw_alpha_1.6_Mmin_5.0_Mmax_100.0_Nsamps20000_full_waveform.p  O1PSD_BBH-powerlaw_alpha_1.6_Mmin_5.0_Mmax_50.0_Nsamps20000_full_waveform.p  O1PSD_BBH-powerlaw_alpha_1.6_Nsamps20000_full_waveform.p  O1PSD_BBH-powerlaw_alpha_1.6_Nsamps6000_inspiral.p  O1PSD_BBH-powerlaw_alpha_1.7_5000Nsamps_z_H0_pD_array.p  O1PSD_BBH-powerlaw_alpha_1.8_5000Nsamps_z_H0_pD_array.p  O1PSD_BBH-powerlaw_alpha_1.9_5000Nsamps_z_H0_pD_array.p  O1PSD_BBH-powerlaw_alpha_2.0_5000Nsamps_z_H0_pD_array.p  (+62 more)
gwcosmo/data/catalog_data/: KTgroups.txt  NGC4993group.txt  glade23_maya_cuts.txt  mdc_counterparts.txt  mdc_v1_cat.txt  mdc_v2-2_lim_cat.txt  (+3 more)
gwcosmo/likelihood/: BBH_pD_zH0_interp.p  BBH_z_H0_pD_array.p  BNS_z_H0_pD_array.p  __init__.py  bright_siren_likelihood.py  dark_siren_likelihood.py  detection_probability.py  em.py  gw.py  posterior_samples.py  skymap.py  skymap2d.py
gwcosmo/maps/: create_mth_map.py
gwcosmo/plotting/: plot.py
gwcosmo/prior/: __init__.py  basic.py  catalog.py  completion.py  custom_math_priors.py  priors.py  process_catalog.py
gwcosmo/utilities/: __init__.py  arguments.py  cosmology.py  mass_prior_utilities.py  posterior_utilities.py  schechter_function.py  schechter_params.py  standard_cosmology.py
scripts_galaxy_catalogs/GLADE+/: README.md  create_glade+.py  select_columnts.sh
(+25 files in other folders)
