[aliases]
test=pytest

[coverage:run]
source = gwcosmo
omit =
    gwcosmo/tests/*
    gwcosmo/config/development.py
    gwcosmo/config/playground.py
    gwcosmo/config/production.py
    gwcosmo/config/test.py
parallel = True
concurrency =
    thread
    multiprocessing

[metadata]
name = gwcosmo
version = 0.0.1.dev0
license = GPL-2+
author = A. N. Author
author_email = a.author@ligo.org
description = A package to estimate cosmological parameters using gravitational-wave observations
long_description = A package to estimate cosmological parameters using gravitational-wave observations
url = https://git.ligo.org/cbc-cosmo/gwcosmo
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Internet
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
python_requires = >= 2.7
install_requires =
    astropy
    numpy
    pytest >= 3.0

[options.package_data]
gwcosmo = data/catalog_data/*.dat, data/catalog_data/*.txt, data/posterior_samples/*.txt