[aliases]
test=pytest

[coverage:run]
source = gwcosmo
omit =
    gwcosmo/tests/*
    gwcosmo/config/development.py
    gwcosmo/config/playground.py
    gwcosmo/config/production.py
    gwcosmo/config/test.py
parallel = True
concurrency =
    thread
    multiprocessing

[metadata]
name = gwcosmo
version = 0.0.1.dev0
license = GPL-2+
author = A. N. Author
author_email = a.author@ligo.org
description = A package to estimate cosmological parameters using gravitational-wave observations
long_description = A package to estimate cosmological parameters using gravitational-wave observations
url = https://git.ligo.org/cbc-cosmo/gwcosmo
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Internet
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
python_requires = >= 3.5
install_requires =
    astropy
    numpy
    pytest >= 3.0

[options.package_data]
gwcosmo = data/catalog_data/*.p, data/catalog_data/*.txt, data/other/*.txt, data/other/*.p, data/event_data/O1/GW150914/*.dat, data/event_data/O1/GW150914/*.fits, data/event_data/O1/GW151012/*.dat, data/event_data/O1/GW151012/*.fits, data/event_data/O1/GW151226/*.dat, data/event_data/O1/GW151226/*.fits, data/event_data/O2/GW170104/*.dat, data/event_data/O2/GW170104/*.fits, data/event_data/O2/GW170608/*.dat, data/event_data/O2/GW170608/*.fits, data/event_data/O2/GW170729/*.dat, data/event_data/O2/GW170729/*.fits, data/event_data/O2/GW170809/*.dat, data/event_data/O2/GW170809/*.fits, data/event_data/O2/GW170814/*.dat, data/event_data/O2/GW170814/*.fits, data/event_data/O2/GW170817/*.dat, data/event_data/O2/GW170817/*.fits, data/event_data/O2/GW170818/*.dat, data/event_data/O2/GW170818/*.fits, data/event_data/O2/GW170823/*.dat, data/event_data/O2/GW170823/*.fits
